[project]
name = "monash-spa-env"
version = "0.1.0"
description = "Python environment for honours students in Monash's School of Physics and Astronomy"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "astroid>=4.0.2",
    "astropy>=7.2.0",
    "astropy-healpix>=1.1.2",
    "astroquery>=0.4.11",
    "ccdproc>=2.5.1",
    "corrfunc>=2.5.3",
    "jupyter>=1.1.1",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "photutils>=2.3.0",
    "pyvo>=1.8",
    "requests>=2.32.5",
    "scipy>=1.16.3",
]
